# user_expense

./: .env.local  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
expenses/: models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_alter_user_username.py
expenses/scripts/: run.sh
user_expense/: asgi.py  settings.py  urls.py  wsgi.py
